2022-09-08T08:25:53Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013576602
* notice: last 14d: unq all: 19 137
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 30 136
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 31 137
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-07T16:29:53Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3009236163
* notice: last 14d: unq all: 19 136
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 29 135
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 30 136
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-07]

2022-09-03T02:11:41Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2982825210
* notice: last 14d: unq all: 19 135
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 29 134
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 29 135
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-02T16:28:52Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2980498108
* notice: last 14d: unq all: 19 134
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 29 133
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 29 134
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-02T08:25:49Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977659191
* notice: last 14d: unq all: 19 133