@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-08T08:25:53Z",
+  "timestamp" : "2022-09-08T16:30:58Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 137,
+  "count" : 138,
   "uniques" : 31,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
