@@ -1,5 +1,5 @@
 {
-  "count": 137,
+  "count": 138,
   "uniques": 19,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
