@@ -1,3 +1,11 @@
+2022-09-08T16:30:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016726858
+* notice: last 14d: unq all: 19 138
+* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 31 137
+* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 31 138
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-08]
+
 2022-09-08T08:25:53Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013576602
 * notice: last 14d: unq all: 19 137
